# QtTaskManager

./: .gitignore  .gitmodules  AdlManager.cpp  AdlManager.h  AdlxManager.cpp  AdlxManager.h  CMakeLists.txt  CPUInfo.cpp  CPUInfo.h  CpuBenchmarkWidget.cpp  CpuInfo.cpp  CpuInfo.h  CpuWorker.cpp  CpuWorker.h  DevicesInfo.cpp  DevicesInfo.h  GPUInfo.cpp  GPUInfo.h  GlWidget.cpp  GlWidget.h  Globals.h  GpuBenchmarkWidget.cpp  GpuBenchmarkWidget.h  GpuInfoAmd.cpp  GpuInfoAmd.h  GpuInfoNVidia.cpp  GpuInfoNVidia.h  GpuWorker.cpp  GpuWorker.h  MainWindow.cpp  MainWindow.h  MemoryInfo.cpp  MemoryInfo.h  MemoryWorker.cpp  MemoryWorker.h  ProcessDatabase.cpp  ProcessDatabase.h  ProcessInfo.cpp  ProcessInfo.h  ProcessWorker.cpp  (+16 more)
src/: AdlxManager.cpp  AdlxManager.h  CpuBenchmarkWidget.h  CpuInfo.cpp  CpuInfo.h  CpuWorker.cpp  CpuWorker.h  DevicesInfo.cpp  DevicesInfo.h  GlWidget.cpp  GlWidget.h  GlWindow.cpp  GlWindow.h  Globals.h  GpuBenchmarkWidget.cpp  GpuInfo.cpp  GpuInfo.h  GpuInfoAmd.cpp  GpuInfoAmd.h  GpuInfoNVidia.cpp  GpuInfoNVidia.h  GpuWorker.cpp  GpuWorker.h  MainWindow.cpp  MainWindow.h  MemoryInfo.cpp  MemoryInfo.h  MemoryWorker.cpp  MemoryWorker.h  ProcessInfo.cpp  ProcessInfo.h  ProcessWorker.cpp  ProcessWorker.h  SystemManager.cpp  SystemManager.h  TabApps.h  TabBenchmark.cpp  TabBenchmark.h  TabHardware.cpp  TabHardware.h  (+14 more)
src/cpu/: CpuInfo.cpp  CpuInfo.h  CpuWorker.cpp  CpuWorker.h
src/cpu/amd/: CpuInfoAmd.cpp  CpuInfoAmd.h  RyzenMasterSdkHandler.cpp  RyzenMasterSdkHandler.h
src/cpu/intel/: CpuInfoIntel.cpp  CpuInfoIntel.h  PcmHandler.cpp  PcmHandler.h
src/cpu/linux/: CpuInfoLinux.cpp  CpuInfoLinux.h
src/cpu/windows/: CpuInfoWindows.cpp  CpuInfoWindows.h
src/gpu/: AdlxManager.cpp  AdlxManager.h  GlGlobals.h  GpuInfo.cpp  GpuInfo.h  GpuInfoAmd.cpp  GpuInfoAmd.h  GpuInfoNVidia.cpp  GpuInfoNVidia.h  GpuWorker.cpp  GpuWorker.h  NvapiHandler.cpp  NvapiHandler.h  NvmlHandler.cpp  NvmlHandler.h
src/gpu/amd/: AdlxHandler.cpp  AdlxHandler.h  AgsHandler.cpp  AgsHandler.h  GpuInfoAmd.cpp  GpuInfoAmd.h
src/gpu/intel/: GenericIGCLApp.h  GpuInfoIntel.cpp  GpuInfoIntel.h  IgclHandler.cpp  IgclHandler.h  ZeroLevelHandler.cpp  ZeroLevelHandler.h
src/gpu/linux/: GpuInfoLinux.cpp  GpuInfoLinux.h
src/gpu/nvidia/: GpuInfoNVidia.cpp  GpuInfoNVidia.h  NvapiHandler.cpp  NvmlHandler.cpp  NvmlHandler.h
src/main/: BaseInfo.cpp  BaseInfo.h
src/memory/: MemoryInfo.cpp  MemoryInfo.h  MemoryWorker.cpp  MemoryWorker.h
src/memory/linux/: MemoryInfoLinux.cpp  MemoryInfoLinux.h
src/memory/windows/: MemoryInfoWindows.cpp  MemoryInfoWindows.h
src/network/: NetworkInfo.cpp  NetworkInfo.h  NetworkWorker.cpp  NetworkWorker.h
src/process/: ProcessInfo.cpp  ProcessInfo.h  ProcessWorker.cpp  ProcessWorker.h
src/process/linux/: ProcessInfoLinux.cpp  ProcessInfoLinux.h
src/process/windows/: ProcessInfoWindows.cpp  ProcessInfoWindows.h
src/system/: SystemInfo.cpp  SystemInfo.h  SystemInfoLinux.cpp  SystemInfoLinux.h  SystemInfoWindows.cpp  SystemInfoWindows.h  SystemWorker.cpp  SystemWorker.h
src/tabs/: TabApiSupport.cpp  TabApiSupport.h  TabBenchmark.cpp  TabBenchmark.h  TabHardware.cpp  TabHardware.h  TabPerformance.cpp  TabPerformance.h  TabProcesses.cpp  TabProcesses.h  TabSystemInfo.cpp  TabSystemInfo.h
src/windows/: DxHandler.cpp  DxHandler.h  WmiInfo.cpp  WmiInfo.h  WmiWorker.cpp  WmiWorker.h
